Refactor(*): PlanItemGroup 도입